# rag-cli-tool

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
example_docs/: sample.md
skills/rag-cli-operator/: SKILL.md
src/rag_cli/: config.py
src/rag_cli/cli/: main.py  output.py
src/rag_cli/cli/commands/: __init__.py  docs.py  ingest.py  init.py  query.py
src/rag_cli/core/: lightrag_engine.py
src/rag_cli/preprocess/: docling_pipeline.py
tests/: test_cli_flow.py
